# gologpp-ros

./: CMakeLists.txt  Readme.md  gologpp.deb
agents/: test_BAT.gpp  turtlesim_example.gpp
include/gologpp_agent/: action_manager.h  ros_backend.h
lib/: libgolog++.so.0.1.0  libreadylog++.so.0.1.0
src/: ros_backend.cpp  ros_backend.h
src/actions/: gpp_alert_auto_dexterity.cpp  gpp_gpp_action_examples_interface.cpp  gpp_lifecycle_msgs.cpp  gpp_moveit_msgs.cpp  gpp_spot_msgs.cpp  gpp_turtlesim.cpp  gpp_webots_spot_msgs.cpp
